three sections total edits needed

--- a/startup.html
+++ b/startup.html
@@ -45,7 +45,43 @@
     </div>
 
 
+    <section id="feature-one">
+        <div class="container">
+            <div class="row">
+                <div class="feature-content">
+                    <div class="col-lg-6">
+                            <iframe width="100%" height="315" src="https://www.youtube.com/embed/ZTLAx3VDX7g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    </div>
+                    <div class="col-lg-5 col-lg-offset-1">
+                        <h6>Watch This</h6>
+                        <h2>Witness the power of Startup.logo in this acapella video</h2>
+                        <p>Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen.</p>
+                        <p>Lorem Ipsum is de standaard proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam en ze door elkaar husselde om een font-catalogus te maken. Het heeft niet alleen vijf eeuwen overleefd maar</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <section id="feature-two" class="feature-dark">
+        <div class="container">
+            <div class="row">
+                <div class="feature-content">
+                    <div class="col-lg-6 feature-caption">
+                        <h6>Incredible feature</h6>
+                        <h2>Totally random websites at the touch of your finger pads.</h2>
+                        <p class="lead">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat laudantium amet possimus, cupiditate sapiente, accusamus voluptatem aperiam autem laboriosam blanditiis itaque eos voluptatum ex natus qui ab fugit atque expedita!
+                        <a href="" role="button" class="btn btn-secondary-outline btn-lg">Get in on the action</a>
+                        </p>
+                    </div>
+                    <div class="col-lg-6 text-sm-center hidden-sm-down">
+                        <img src="../bootstrap4/img/iphone-1.png" alt="iphone">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
