--- a/startup.html
+++ b/startup.html
@@ -75,7 +75,7 @@
                         <a href="" role="button" class="btn btn-secondary-outline btn-lg">Get in on the action</a>
                         </p>
                     </div>
-                    <div class="col-lg-6 text-sm-center hidden-sm-down">
+                    <div class="col-lg-6 text-sm-center hidden-md-down">
                         <img src="../bootstrap4/img/iphone-1.png" alt="iphone">
                     </div>
                 </div>
@@ -83,6 +83,148 @@
         </div>
     </section>
 
+    <section id="feature-three">
+        <div class="container">
+            <div class="row">
+                <div class="feature-content">
+                    <div class="col-lg-6 hidden-md-down">
+                        <img src="../bootstrap4/img/macbook.png" alt="macbook">
+                    </div>
+                    <div class="col-lg-5 col-lg-offset-1">
+                        <h6>The wow factor</h6>
+                        <h2>Australians wouldn't give a Startup.logo for anything else</h2>
+                        <p>Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam en ze door elkaar husselde om een font-catalogus te maken. Het heeft niet alleen vijf eeuwen overleefd maar is ook, vrijwel onveranderd, overgenomen in elektronische letterzetting. Het is in de jaren '60 populair geworden met de introductie van Letraset vellen met Lorem Ipsum passages en meer recentelijk door desktop publishing software zoals Aldus PageMaker die versies van Lorem Ipsum bevatten.</p>
+                        <a href="" role="button" class="btn btn-primary-outline btn-lg">Git'r done!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="feature-four" class="feature-alt">
+        <div class="container">
+            <div class="row">
+                <div class="feature-content">
+                    <div class="col-lg-6">
+                        <blockquote class="blockquote">
+                            &ldquo; No Startup.logo, no kiss.&rdquo;
+                            <footer class="blockquote-footer">
+                                Brelvis Hesley <cite>Some guy at a wedding</cite>
+                            </footer>
+                        </blockquote>
+                    </div>
+                    <div class="col-lg-6 hidden-md-down">
+                        <img src="../bootstrap4/img/brad-elvis.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="feature-five" class="feature-full">
+        <div class="container">
+            <div class="row">
+                <div class="feature-content">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <h6>Powerfully Packed Action</h6>
+                        <h2>When absolutely, positively has to be Startup.logo overnight.</h2>
+                        <p class="lead">Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam en ze door elkaar husselde om een font-catalogus te maken. Het heeft niet alleen vijf eeuwen overleefd maar is ook, vrijwel onveranderd, overgenomen in elektronische letterzetting. Het is in de jaren '60 populair geworden met de introductie van Letraset vellen met Lorem Ipsum passages en meer recentelijk door desktop publishing software zoals Aldus PageMaker die versies van Lorem Ipsum bevatten.</p>
+                        <h6>With Startup.logo you can:</h6>
+                        <div class="col-lg-6">
+                            <ul>
+                                <li>Put Sriracha on just about anything</li>
+                                <li>Use your wallet for anything other than buying</li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-6">
+                            <ul>
+                                <li>Get solid advice from midly attractive people</li>
+                                <li>Win at most things</li>
+                            </ul>
+                        </div>
+                        <img src="../bootstrap4/img/macbook-2.png" alt="macbook">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div id="feature-six">
+            <div class="feature-dark">
+                <div class="container">
+                    <div class="row">
+                        <div class="feature-content">
+                            <div class="col-lg-6 hidden-md-down">
+                                <img src="../bootstrap4/img/ipad.png" alt="ipad">
+                            </div>
+                            <div class="col-lg-5 col-lg-offset-1">
+                                <h6>The all-in-one solution</h6>
+                                <h2>Nobody doesn't like Startup.logo</h2>
+                                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis fugit eveniet sit mollitia temporibus. Possimus, voluptates. Ratione quo illo facere quasi, repudiandae eligendi nostrum quam rem soluta debitis totam blanditiis!</p>
+                                <a href="" role="button" class="btn btn-secondary-outline btn-lg">Mangos! (or mangoes?)</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="feature-seven">
+        <div class="container">
+            <div class="row">
+                <div class="feature-content">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <h6>100% No-Money-Back guarantee</h6>
+                        <h2>Put your money where Startup.logo's mouth is.</h2>
+                        <p>Starting as low as $379/day. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta aut atque fugiat dolorem saepe temporibus necessitatibus, voluptates maxime ducimus, et libero animi officiis similique expedita quibusdam nam illum laboriosam laudantium.</p>
+                        <a href="" role="button" class="btn btn-sucess-outline btn-lg">Toss some money our way (please)</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer id="main-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    &copy; 2018 Startup.logo is not a real thing. If it is, this site was not meant to be a mockery of it
+                    <br>
+                    Coded by <a href="https://github.com/msdibble">Michael Dibble</a>
+                </div>
+                <div class="col-mg-2">
+                    <h6>Our product</h6>
+                    <ul class="list-unstyled">
+                        <li><a href="">Features</a></li>
+                        <li><a href="">Solutions</a></li>
+                        <li><a href="">Plans</a></li>
+                        <li><a href="">Sign in</a></li>
+                    </ul>
+                </div>
+                <div class="col-mg-2">
+                    <h6>Our team</h6>
+                    <ul class="list-unstyled">
+                        <li><a href="">About</a></li>
+                        <li><a href="">Highlights</a></li>
+                        <li><a href="">Investors</a></li>
+                        <li><a href="">Partners</a></li>
+                    </ul>
+                </div>
+                <div class="col-mg-2">
+                        <h6>Other things</h6>
+                        <ul class="list-unstyled">
+                            <li><a href="">Jobs</a></li>
+                            <li><a href="">Contact</a></li>
+                            <li><a href="">FAQ</a></li>
+                        </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
