fixed navbar and responsive

--- a/startup.html
+++ b/startup.html
@@ -10,31 +10,28 @@
 </head>
 <body>
     
-    <nav class="navbar fixed-top navbar-light bg-light">
-        <a class="navbar-brand" href="#"><img src="../bootstrap4/img/logo.png" alt="startup.logo" height="26"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#startupNavbar" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="startupNavbar">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Blog</a>
-            </li>
-            <li class="nav-item">
-                <a class="btn btn-primary" href="#">Sign In</a>
-              </li>
-          </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#"><img src="../bootstrap4/img/logo.png" alt="startup.logo"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link disabled" href="#">Disabled</a>
+                    </li>
+                </ul>
         </div>
-     </nav>     
+    </nav>
 
     <div id="stage">
         <div id="stage-caption">
@@ -52,7 +49,7 @@
                     <div class="col-lg-6">
                             <iframe width="100%" height="315" src="https://www.youtube.com/embed/ZTLAx3VDX7g" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                     </div>
-                    <div class="col-lg-5 col-lg-offset-1">
+                    <div class="col-lg-5 offset-lg-1">
                         <h6>Watch This</h6>
                         <h2>Witness the power of Startup.logo in this acapella video</h2>
                         <p>Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen.</p>
@@ -72,10 +69,10 @@
                         <h2>Totally random websites at the touch of your finger pads.</h2>
                         <p class="lead">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat laudantium amet possimus, cupiditate sapiente, accusamus voluptatem aperiam autem laboriosam blanditiis itaque eos voluptatum ex natus qui ab fugit atque expedita!
-                        <a href="" role="button" class="btn btn-secondary-outline btn-lg">Get in on the action</a>
+                        <a href="" role="button" class="btn btn-lg btn-outline-secondary">Get in on the action</a>
                         </p>
                     </div>
-                    <div class="col-lg-6 text-sm-center hidden-md-down">
+                    <div class="col-lg-6 text-sm-center d-none d-lg-block">
                         <img src="../bootstrap4/img/iphone-1.png" alt="iphone">
                     </div>
                 </div>
@@ -87,14 +84,14 @@
         <div class="container">
             <div class="row">
                 <div class="feature-content">
-                    <div class="col-lg-6 hidden-md-down">
+                    <div class="col-lg-6 d-none d-lg-block">
                         <img src="../bootstrap4/img/macbook.png" alt="macbook">
                     </div>
                     <div class="col-lg-5 col-lg-offset-1">
                         <h6>The wow factor</h6>
                         <h2>Australians wouldn't give a Startup.logo for anything else</h2>
                         <p>Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam en ze door elkaar husselde om een font-catalogus te maken. Het heeft niet alleen vijf eeuwen overleefd maar is ook, vrijwel onveranderd, overgenomen in elektronische letterzetting. Het is in de jaren '60 populair geworden met de introductie van Letraset vellen met Lorem Ipsum passages en meer recentelijk door desktop publishing software zoals Aldus PageMaker die versies van Lorem Ipsum bevatten.</p>
-                        <a href="" role="button" class="btn btn-primary-outline btn-lg">Git'r done!</a>
+                        <a href="" role="button" class="btn btn-lg btn-outline-primary">Git'r done!</a>
                     </div>
                 </div>
             </div>
@@ -114,7 +111,7 @@
                             </footer>
                         </blockquote>
                     </div>
-                    <div class="col-lg-6 hidden-md-down">
+                    <div class="col-lg-6 d-none d-lg-block">
                         <img src="../bootstrap4/img/brad-elvis.png">
                     </div>
                 </div>
@@ -127,7 +124,7 @@
         <div class="container">
             <div class="row">
                 <div class="feature-content">
-                    <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-lg-8 offset-lg-2">
                         <h6>Powerfully Packed Action</h6>
                         <h2>When absolutely, positively has to be Startup.logo overnight.</h2>
                         <p class="lead">Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam en ze door elkaar husselde om een font-catalogus te maken. Het heeft niet alleen vijf eeuwen overleefd maar is ook, vrijwel onveranderd, overgenomen in elektronische letterzetting. Het is in de jaren '60 populair geworden met de introductie van Letraset vellen met Lorem Ipsum passages en meer recentelijk door desktop publishing software zoals Aldus PageMaker die versies van Lorem Ipsum bevatten.</p>
@@ -151,22 +148,18 @@
         </div>
     </section>
 
-    <section>
-        <div id="feature-six">
-            <div class="feature-dark">
-                <div class="container">
-                    <div class="row">
-                        <div class="feature-content">
-                            <div class="col-lg-6 hidden-md-down">
-                                <img src="../bootstrap4/img/ipad.png" alt="ipad">
-                            </div>
-                            <div class="col-lg-5 col-lg-offset-1">
-                                <h6>The all-in-one solution</h6>
-                                <h2>Nobody doesn't like Startup.logo</h2>
-                                <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis fugit eveniet sit mollitia temporibus. Possimus, voluptates. Ratione quo illo facere quasi, repudiandae eligendi nostrum quam rem soluta debitis totam blanditiis!</p>
-                                <a href="" role="button" class="btn btn-secondary-outline btn-lg">Mangos! (or mangoes?)</a>
-                            </div>
-                        </div>
+    <section id="feature-six" class="feature-dark">
+        <div class="container">
+            <div class="row">
+                <div class="feature-content">
+                    <div class="col-lg-6 d-none d-lg-block">
+                        <img src="../bootstrap4/img/ipad.png" alt="ipad">
+                    </div>
+                    <div class="col-lg-5 offset-lg-1">
+                        <h6>The all-in-one solution</h6>
+                        <h2>Nobody doesn't like Startup.logo</h2>
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis fugit eveniet sit mollitia temporibus. Possimus, voluptates. Ratione quo illo facere quasi, repudiandae eligendi nostrum quam rem soluta debitis totam blanditiis!</p>
+                        <a href="" role="button" class="btn btn-lg btn-outline-secondary">Mangos! (or mangoes?)</a>
                     </div>
                 </div>
             </div>
@@ -177,11 +170,11 @@
         <div class="container">
             <div class="row">
                 <div class="feature-content">
-                    <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-lg-8 offset-lg-2">
                         <h6>100% No-Money-Back guarantee</h6>
                         <h2>Put your money where Startup.logo's mouth is.</h2>
                         <p>Starting as low as $379/day. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta aut atque fugiat dolorem saepe temporibus necessitatibus, voluptates maxime ducimus, et libero animi officiis similique expedita quibusdam nam illum laboriosam laudantium.</p>
-                        <a href="" role="button" class="btn btn-sucess-outline btn-lg">Toss some money our way (please)</a>
+                        <a href="" role="button" class="btn btn-lg btn-outine-success">Toss some money our way (please)</a>
                     </div>
                 </div>
             </div>
